<resources>
    <string name="app_name">Calculator</string>
    <string name="calc_text">0</string>
    <string name="_dash">/</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="multiply">*</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="Substract">-</string>
    <string name="_0">0</string>
    <string name="clr">CLR</string>
    <string name="Add">+</string>
    <string name="Equal">=</string>
    <string name="dot">.</string>
    <string name="bksp">Bksp</string>
    <string name="changeSign">+/-</string>
    <string name="basic_calculator">Basic Calculator</string>
    <string name="welcome_to_the_calculator">Welcome to the calculator!</string>
    <string name="advanced_calculator">Advanced calculator</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="sin">sin</string>
    <string name="tan">tan</string>
    <string name="ln">ln</string>
    <string name="sqrt">sqrt</string>
    <string name="x_2">x^2</string>
    <string name="x_y">x^y</string>
    <string name="log">Log</string>
    <string name="logg">log</string>
    <string name="author_marcin_hebda">Author: Marcin Hebda</string>
</resources>