<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/lightGrey"
        android:padding="10dp"
        android:textSize="48sp"
        android:gravity="end|bottom"
        android:textColor="@color/secondary"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btnSeven"
            android:layout_margin="2dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_7"
            />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnEight"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_8"
            />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnNine"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_9"
            />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnDivide"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:text="@string/_dash"
            tools:ignore="UsingOnClickInXml" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btnFour"
            android:layout_margin="2dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_4"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnFive"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_5"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnSix"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_6"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnMultiply"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:text="@string/multiply"
            tools:ignore="UsingOnClickInXml" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btnOne"
            android:layout_margin="2dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_1"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnTwo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_2"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnThree"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_3"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnSubstract"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:text="@string/Substract"
            tools:ignore="UsingOnClickInXml" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btnDot"
            android:layout_margin="2dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDecimalPoint"
            android:text="@string/dot"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:id="@+id/btnZero"
            android:layout_margin="2dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_0"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:id="@+id/btnPlusMinus"
            android:layout_margin="2dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onChangeSign"
            android:text="@string/changeSign"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:text="@string/Add"
            tools:ignore="UsingOnClickInXml" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnClear"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClear"
            android:text="@string/clr"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnEqual"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="2"
            android:backgroundTint="#4E6C50"
            android:onClick="onEqual"
            android:text="@string/Equal"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:id="@+id/btnBackspace"
            android:layout_margin="2dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onBackspace"
            android:text="@string/bksp"
            tools:ignore="UsingOnClickInXml" />
    </LinearLayout>
</LinearLayout>