<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0EBCE"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:paddingBottom="50dp"
        android:text="@string/welcome_to_the_calculator"
        android:textAlignment="center"
        android:textColor="#4E6C50"
        android:textSize="40sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="12dp" />

    <Button
        android:id="@+id/btnBasicCalculator"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="2dp"
        android:textSize="15sp"
        android:text="@string/basic_calculator" />
    <Button
        android:id="@+id/btnAdvancedCalculator"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="2dp"
        android:textSize="15sp"
        android:text="@string/advanced_calculator" />
    <Button
        android:id="@+id/btnAbout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="2dp"
        android:textSize="15sp"
        android:text="@string/about" />
    <Button
        android:id="@+id/btnExit"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="2dp"
        android:textSize="15sp"
        android:text="@string/exit" />

</LinearLayout>